--- a/package.json
+++ b/package.json
@@ -21,21 +21,30 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
+    "@craigmcc/shared-utils": "^1.0.3",
     "@prisma/client": "^4.16.1",
-    "@types/node": "20.3.1",
+    "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "pino": "^8.14.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rotating-file-stream": "^3.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "prisma": "^4.16.1"
+    "@types/chai": "^4.3.5",
+    "@types/jest": "^29.5.2",
+    "babel-jest": "^29.5.0",
+    "chai": "^4.3.7",
+    "jest": "^29.5.0",
+    "prisma": "^4.16.1",
+    "ts-node": "^10.9.1"
   }
 }
